--- a/packages/zones.yaml
+++ b/packages/zones.yaml
@@ -55,6 +55,15 @@ automation:
         data:
           icon: ":car:"
           username: "Tracking"
+          blocks_template:
+            - type: section
+              text:
+                type: mrkdwn
+                text: >
+                  :car:
+                  {% if (states.device_tracker.mi_9t.state == "Curro Rosen Castle") %}David{% endif %}
+                  {% if (states.device_tracker.nokia_6_1.state == "Curro Rosen Castle") %}Karen{% endif %}
+                  arrived at Curro Rosen Castle
         target: ["#general"]
         message: >
           :car:
@@ -77,6 +86,15 @@ automation:
         data:
           icon: ":car:"
           username: "Tracking"
+          blocks_template:
+            - type: section
+              text:
+                type: mrkdwn
+                text: >
+                  :car:
+                  {% if (trigger.from_state.object_id == 'mi_9t') %}David{% endif %}
+                  {% if (trigger.from_state.object_id == 'nokia_6_1' ) %}Karen{% endif %}
+                  left Curro Rosen Castle
         target: ["#general"]
         message: >
           :car:
