--- a/packages/vacuum.yaml
+++ b/packages/vacuum.yaml
@@ -51,6 +51,12 @@ automation:
         data:
           icon: ":robot_face:"
           username: "Vacuum Robot"
+          blocks_template:
+            - type: section
+              text:
+                type: mrkdwn
+                text: >
+                  :robot_face: Vacuum Robot is now {{ states.vacuum.rockrobo.state }}
         title: 'Vacuum Robot'
         target: ["#general"]
         message: >
@@ -94,6 +100,12 @@ automation:
         data:
           icon: ":robot_face:"
           username: "Vacuum Robot"
+          blocks_template:
+            - type: section
+              text:
+                type: mrkdwn
+                text: >
+                  :robot_face: Vacuum Robot Error: {{ states.sensor.vacuum_error_code.state }} {{ states.sensor.vacuum_error_message.state }} 
         title: 'Vacuum Robot Error'
         target: ["#general"]
         message: >
@@ -114,6 +126,12 @@ automation:
         data:
           icon: ":robot_face:"
           username: "Vacuum Robot"
+          blocks_template:
+            - type: section
+              text:
+                type: mrkdwn
+                text: >
+                  :robot_face: Vacuum Robot failed to dock!
         title: 'Vacuum Robot'
         target: ["#general"]
         message: >
@@ -151,6 +169,16 @@ script:
 #          Start time: {{ states.vacuum.rockrobo.attributes.last_run_stats.startTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
 #          End time: {{ states.vacuum.rockrobo.attributes.last_run_stats.endTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
           data:
+            blocks_template:
+              - type: section
+                text:
+                  type: mrkdwn
+                  text: >
+                    Vacuum Robot latest cleaning stats:{{- '\n' -}}
+                    Duration: {{ (states.vacuum.rockrobo.attributes.last_run_stats.duration|int)/60|round(1) }} minutes{{- '\n' -}}
+                    Area: {{ states.vacuum.rockrobo.attributes.last_run_stats.area }} m2{{- '\n' -}}
+        #          Start time: {{ states.vacuum.rockrobo.attributes.last_run_stats.startTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
+        #          End time: {{ states.vacuum.rockrobo.attributes.last_run_stats.endTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
             file: 
               path: "/config/www/cam_captures/rockrobo_map_{{ now ().year }}_{{ now ().month }}_{{ now ().day }}_{{ now ().hour }}_{{ now ().minute }}.jpg"
               ### path is now required as of 0.113.0 see https://github.com/home-assistant/home-assistant.io/pull/13860/files
