--- a/packages/switch_trigger_babyroom_heater.yaml
+++ b/packages/switch_trigger_babyroom_heater.yaml
@@ -15,6 +15,7 @@ input_datetime:
 
 automation:
   - alias: "Turn on Babyroom Heater"
+    max_exceeded: debug # see if we can remove warning
     trigger:
       - platform: state
         entity_id: sensor.baby_room_temperature, sensor.outside_temperature   # baby room, outside
@@ -41,6 +42,7 @@ automation:
         entity_id: switch.heater_baby_room
 
   - alias: "Turn off Babyroom Heater"
+    max_exceeded: debug # see if we can remove warning
     trigger:
       - platform: state
         entity_id: sensor.baby_room_temperature, sensor.outside_temperature   # baby room, outside
