--- a/packages/new_release.yaml
+++ b/packages/new_release.yaml
@@ -8,6 +8,14 @@ automation:
     action:
       - service: notify.slack
         data_template:
-          title: 'New Home Assistant Release'
           target: ["#alerts-david"]
-          message: "Home Assistant  {{ state_attr('binary_sensor.updater', 'newest_version') }}  is now available."
+          message: "New Home Assistant  {{ state_attr('binary_sensor.updater', 'newest_version') }}  is now available."
+          data:
+            icon:
+            username: Home Assistant
+            blocks_template:
+              - type: section
+                text:
+                  type: mrkdwn
+                  text: >
+                    New Home Assistant  {{ state_attr('binary_sensor.updater', 'newest_version') }}  is now available.
