--- a/packages/light_triggers_plex.yaml
+++ b/packages/light_triggers_plex.yaml
@@ -24,11 +24,34 @@ automation:
     data:
       entity_id:
         - timer.loungelight
-  - service: light.turn_off
-    data:
-      entity_id:
-        - light.shelly_kitchen
   - service: light.turn_on
     data:
       entity_id: light.shelly_lounge
       brightness: '30'
+  - service: automation.trigger
+    data:
+      entity_id:
+        - automation.set_kitchen_lights_when_plex_kodi_is_playing
+      skip_condition: false
+
+- alias: Set kitchen lights when Plex(kodi) is playing
+  trigger:
+    - platform: state
+      entity_id: media_player.plex_plex_for_kodi_kodi_add_on_localhost
+      to: 'playing-disabled'
+  condition:
+    condition: and
+    conditions:
+    #- condition: template
+    #  value_template: "{{ 'playing' in trigger.to_state.state }}"
+    - condition: state  # 'night' condition: from sunset until sunrise 
+      entity_id: sun.sun
+      state: 'below_horizon'
+    - condition: state
+      entity_id: input_boolean.kitchenwork
+      state: 'off'
+  action:
+  - service: light.turn_off
+    data:
+      entity_id:
+        - light.shelly_kitchen
