--- a/packages/alarm.yaml
+++ b/packages/alarm.yaml
@@ -1,5 +1,4 @@
 ---
-
 envisalink: !include includes/envisalink.yaml
   #-
   #                  _           _ _       _
@@ -91,3 +90,63 @@ envisalink: !include includes/envisalink.yaml
     26:
       name: 'Back Beam'
       type: 'motion'
+
+group:
+  armed_away:
+    name: Armed Away Sensors
+    entities:
+      - binary_sensor.babyroom_pir
+      - binary_sensor.babyroom_window
+      - binary_sensor.back_beam
+      - binary_sensor.back_garage_door
+      - binary_sensor.back_garage_pir
+      - binary_sensor.braai_room_pir
+      - binary_sensor.ensuite_pir
+      - binary_sensor.front_beam
+      - binary_sensor.front_door
+      - binary_sensor.front_garage_door_window
+      - binary_sensor.kitchen_pir
+      - binary_sensor.kitchen_window
+      - binary_sensor.lounge_pir
+      - binary_sensor.lounge_window
+      - binary_sensor.main_bedroom_pir
+      - binary_sensor.scullery_door
+      - binary_sensor.sculllery_window
+      - binary_sensor.spare_bedroom_pir
+      - binary_sensor.study_pir
+      - binary_sensor.study_window
+  armed_home:
+    name: Armed Home Sensors
+    entities:
+      - binary_sensor.babyroom_window
+      - binary_sensor.back_beam
+      - binary_sensor.back_garage_door
+      - binary_sensor.back_garage_pir
+      - binary_sensor.braai_room_pir
+      - binary_sensor.front_beam
+      - binary_sensor.front_door
+      - binary_sensor.front_garage_door_window
+      - binary_sensor.kitchen_window
+      - binary_sensor.lounge_window
+      - binary_sensor.scullery_door
+      - binary_sensor.sculllery_window
+      - binary_sensor.study_window
+  armed_night:
+    name: Armed Night Sensors
+    entities:
+      - binary_sensor.babyroom_window
+      - binary_sensor.back_beam
+      - binary_sensor.back_garage_door
+      - binary_sensor.back_garage_pir
+      - binary_sensor.braai_room_pir
+      - binary_sensor.front_beam
+      - binary_sensor.front_door
+      - binary_sensor.front_garage_door_window
+      - binary_sensor.kitchen_pir
+      - binary_sensor.kitchen_window
+      - binary_sensor.lounge_pir
+      - binary_sensor.lounge_window
+      - binary_sensor.scullery_door
+      - binary_sensor.sculllery_window
+      - binary_sensor.spare_bedroom_pir
+      - binary_sensor.study_window
